cmd/review-middleware/k8s/02-review-middleware.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-middleware
  namespace: kube-system
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: review-middleware
  template:
    metadata:
      labels:
        app: review-middleware
    spec:
      containers:
        - name: review-middleware
          image: uhub.service.ucloud.cn/entropypool/review-middleware:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: service-config
              mountPath: /etc/ReviewMiddleware
      volumes:
        - name: service-config
          configMap:
            name: review-middleware-config
            items:
              - key: service-conf
                path: ReviewMiddleware.viper.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: review-middleware
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 50660
      targetPort: 50660
    - name: grpc
      port: 50661
      targetPort: 50661
    - name: healthz
      port: 50662
      targetPort: 50662
    - name: prometheus
      port: 50663
      targetPort: 50663
  selector:
    app: review-middleware
