cmd/review-middleware/k8s/05-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: review-middleware-traefik-app-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: review-middleware-traefik-app
    k8s.kuboard.cn/workload: review-middleware-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-review-middleware-prefix@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-user-role-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/reviewmw/v1/review_CreateReview
            backend:
              serviceName: review-middleware
              servicePort: 50660
          - path: /api/reviewmw/v1/review_UpdateReview
            backend:
              serviceName: review-middleware
              servicePort: 50660
          - path: /api/reviewmw/v1/review_DeleteReview
            backend:
              serviceName: review-middleware
              servicePort: 50660
          - path: /api/reviewmw/v1/review_GetReview
            backend:
              serviceName: review-middleware
              servicePort: 50660
          - path: /api/reviewmw/v1/review_GetReviews
            backend:
              serviceName: review-middleware
              servicePort: 50660
          - path: /api/reviewmw/v1/review_ExistReviewConds
            backend:
              serviceName: review-middleware
              servicePort: 50660
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.development.npool.top
      http: *http_rules
